feat: add transparent options to combobox

--- a/src/app/@ansyn/core/forms/combo-box/combo-box.component.html
+++ b/src/app/@ansyn/core/forms/combo-box/combo-box.component.html
@@ -1,4 +1,4 @@
-<div class="combo-container">
+<div class="combo-container" [ngClass]="direction">
 
 	<ansyn-combo-box-trigger
 		[isActive]="optionsVisible"
