--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.less
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.less
@@ -37,6 +37,14 @@
 			height: 30px;
 		}
 	}
-
+	span.licence {
+		a {
+			color: white;
+		}
+	}
+	.sensorTypes {
+		display: flex;
+		flex-direction: column;
+	}
 }
 
