--- a/src/app/@ansyn/core/forms/ansyn-radio/ansyn-radio.component.less
+++ b/src/app/@ansyn/core/forms/ansyn-radio/ansyn-radio.component.less
@@ -1,37 +1,52 @@
 @color-half-white: rgba(255,255,255,0.7);
-
-input {
-	display: none;
-}
-
-label {
-	display: flex;
-	align-items: center;
-	user-select: none;
-	color: @color-half-white;
-
-	.outer-circle {
+:host {
+	label {
 		display: flex;
-		justify-content: center;
 		align-items: center;
-		width: 20px;
-		height: 20px;
-		border-radius: 50%;
-		border: 2px solid @color-half-white;
-		margin-right: 15px;
-
-		.inner-circle {
-			width: 10px;
-			height: 10px;
-			border-radius: 50%;
-			background-color: white;
-		}
-	}
-
-	&.selected {
-		color: white;
+		user-select: none;
+		color: @color-half-white;
 		.outer-circle {
-			border-color: white;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 15px;
+			height: 15px;
+			border-radius: 50%;
+			border: 2px solid @color-half-white;
+			margin-right: 10px;
+			.inner-circle {
+				opacity: 0;
+				visibility: hidden;
+				transition: .2s;
+				width: 7px;
+				height: 7px;
+				box-shadow: 0 0 1px 2px white;
+				border-radius: 50%;
+				background-color: white;
+			}
+		}
+
+		&:hover {
+			color: white;
+			.outer-circle {
+				border-color: white;
+			}
+		}
+
+	}
+
+	input {
+		display: none;
+		&:checked + label {
+			color: white;
+			.outer-circle {
+				border-color: white;
+				.inner-circle {
+					visibility: visible;
+					opacity: 1;
+				}
+			}
 		}
 	}
+
 }
