enh: combo box floating placeholder

--- a/src/app/@ansyn/core/forms/combo-box-trigger/combo-box-trigger.component.html
+++ b/src/app/@ansyn/core/forms/combo-box-trigger/combo-box-trigger.component.html
@@ -7,6 +7,8 @@
 
 	<i class="block-icon" [ngClass]="icon" *ngIf="icon"></i>
 	<div class="rander" [innerHTML]="render"></div>
+	<ng-content></ng-content>
+
 	<span class="arrow">
 			{{ !isActive ? '▼' : '▲'}}
 		</span>
