--- a/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
@@ -2,30 +2,6 @@
 @import 'core/less/colors';
 
 :host {
-	&.transparent {
-		@transparent-color: rgba(255, 255, 255, 0.4);
-
-		/deep/ div.combo-container ansyn-combo-box-trigger button.trigger {
-			background: transparent;
-			border: none;
-			border-bottom: 1px solid @transparent-color;
-			padding: 6px;
-		}
-
-		div.combo-container .options-container {
-			background: @application-main-color;
-			border-color: @transparent-color;
-		}
-		.combo-container {
-			&.top {
-				/deep/ ansyn-combo-box-trigger button.trigger {
-					border-bottom: none;
-					border-top: 1px solid @transparent-color;
-				}
-			}
-		}
-	}
-
 	&.combo-center .combo-container .options-container .option {
 		justify-content: center;
 		text-align: center;
@@ -38,21 +14,6 @@
 		height: 100%;
 		width: 100%;
 		position: relative;
-
-		&.bottom {
-			.options-container {
-				border-top: none;
-			}
-		}
-
-		&.top {
-			.options-container {
-				top: initial;
-				bottom: 100%;
-				border-bottom: none;
-			}
-		}
-
 		.options-container {
 			border: 1px solid;
 			width: auto;
@@ -111,5 +72,61 @@
 				}
 			}
 		}
+
+		&.transparent {
+			.options-container {
+				border-left: none;
+				border-right: none;
+			}
+			@transparent-color: rgba(255, 255, 255, 0.4);
+
+			/deep/ ansyn-combo-box-trigger button.trigger {
+				background: transparent;
+				border: none;
+				border-bottom: 1px solid @transparent-color;
+				padding: 6px;
+			}
+
+			.options-container {
+				background: @application-main-color;
+				border-color: @transparent-color;
+			}
+
+			&.top {
+				/deep/ ansyn-combo-box-trigger button.trigger {
+					border-bottom: none;
+					border-top: 1px solid @transparent-color;
+				}
+			}
+		}
+
+		&.bottom {
+			.options-container {
+				border-top: none;
+			}
+		}
+
+		&.top {
+			.options-container {
+				top: initial;
+				bottom: 100%;
+				border-bottom: none;
+			}
+		}
+	}
+}
+
+div.placeholder {
+	position: absolute;
+	width: 100%;
+	color: white;
+	transition: .2s;
+	text-align: left;
+	bottom: 6px;
+	&.float {
+		bottom: 100%;
+		padding: -1px 0;
+		font-size: 13px;
+		color: rgba(255, 255, 255, 0.7);
 	}
 }
