--- a/src/app/@ansyn/menu-items/algorithms/components/algorithms/algorithms.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/algorithms/algorithms.component.html
@@ -1,5 +1,18 @@
-<ansyn-tasks-table-page></ansyn-tasks-table-page>
+<ng-container [ngSwitch]="page">
 
-<p>
-	algorithms works!
-</p>
+	<ansyn-tasks-table-page
+		*ngSwitchCase="'table'"
+		(goto)="gotoPage($event)"
+	></ansyn-tasks-table-page>
+
+	<ansyn-tasks-form-page
+		*ngSwitchCase="'form'"
+		(goto)="gotoPage($event)"
+	></ansyn-tasks-form-page>
+
+	<p *ngSwitchDefault>
+		algorithms works!
+	</p>
+
+</ng-container>
+
