(feat): functioning provider

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1506,8 +1506,7 @@
     "delayMultiple": 300
   },
   "tbOverlaysSourceConfig": {
-    "baseUrl": "http://tb-server.webiks.com/api/ansyn/ansynService",
-    ],
+    "baseUrl": "http://tb-server.webiks.com/api/ansyn/ansynService"
   },
   "auth0Config": {
       "auth0Active": {{ getv "/ansyn/auth0/auth0Active" "false" }},
