--- a/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
@@ -74,13 +74,9 @@
 		}
 
 		&.transparent {
-			.options-container {
-				border-left: none;
-				border-right: none;
-			}
 			@transparent-color: rgba(255, 255, 255, 0.4);
 
-			/deep/ ansyn-combo-box-trigger button.trigger {
+			/deep/ button[ansynComboBoxTrigger] {
 				background: transparent;
 				border: none;
 				border-bottom: 1px solid @transparent-color;
@@ -88,12 +84,20 @@
 			}
 
 			.options-container {
-				background: @application-main-color;
+				box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.2);
+				background: white;
 				border-color: @transparent-color;
+				.option {
+					font-weight: 500;
+					&:hover {
+						background-color: whitesmoke;
+					}
+					color: @application-main-color
+				}
 			}
 
 			&.top {
-				/deep/ ansyn-combo-box-trigger button.trigger {
+				/deep/ button[ansynComboBoxTrigger] {
 					border-bottom: none;
 					border-top: 1px solid @transparent-color;
 				}
