feat: input type file with ngModel

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1059,6 +1059,9 @@
   },
   "ORIENTATIONS": ["Align North", "User Perspective", "Imagery Perspective"],
   "uploadsConfig": {
-    "sensorTypes": [ "Satellite", "Aircraft", "UAV", "Ballon", "Kite" ]
-  }
+      "sensorTypes": [ "UAV", "Satellite", "Aircraft", "Ballon", "Kite" ],
+      "sensorNames": ["AAAA", "BBBB"],
+      "defaultSensorType": "UAV",
+      "rulesLink": "http://google.com/"
+   }
 }
