--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.less
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.less
@@ -64,9 +64,18 @@
 	}
 }
 
-input[type='file'] {
-	display: none;
-	background: transparent;
+div.fileinput {
+	label {
+		input[type='file'] {
+			display: none;
+			background: transparent;
+		}
+		&:focus, &:hover {
+			outline: none;
+			box-shadow: 0px 0px 1px 0px white inset;
+		}
+		padding: 5px 0;
+	}
 }
 
 div.title {
