fix: data input tooltip

--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -8,7 +8,7 @@
 			(click)="toggleDataInputFilterIcon()"
 			icon="icon-status-bar-input-data"
 			[isActive]="dataInputFilterExpand"
-			[attr.tooltip-value]="comboBoxToolTipDescription || null"
+			[attr.tooltip-value]="toolTips.dataInputFilter"
 			tooltip-class="top"
 			[render]="dataInputFiltersTitle">
 		</button>
