tasks form (cont.) (combo-box fix: selection UI should not be dependent on the binding)

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -12,6 +12,7 @@
 
 <ansyn-combo-box
 	[options]="['aaa', 'bbb', 'ccc']"
+	[selected]="algorithm"
 	[color]="'transparent'"
 	[placeholder]="'Select algorithm'"
 	class="margin"
