--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -36,7 +36,7 @@
 				width: 140px;
 			}
 			&.with-buttons {
-				/deep/ .trigger {
+				/deep/ button[ansynComboBoxTrigger] {
 					padding-right: 14px;
 				}
 			}
