--- a/src/app/@ansyn/core/forms/combo-box/combo-box.component.html
+++ b/src/app/@ansyn/core/forms/combo-box/combo-box.component.html
@@ -1,20 +1,19 @@
 <div class="combo-container" [ngClass]="[direction, color]">
-	<ansyn-combo-box-trigger
-		[isActive]="optionsVisible"
-		[comboBoxToolTipDescription]="comboBoxToolTipDescription"
-		[render]="render(selected)"
-		[icon]="icon"
-		(click)="toggleShow()">
-		<div class="placeholder" *ngIf="placeholder" [class.float]="selected || optionsVisible"> {{ placeholder }} </div>
-	</ansyn-combo-box-trigger>
+	<button ansynComboBoxTrigger
+			[disabled]="disabled"
+			[isActive]="optionsVisible"
+			[attr.tooltip-value]="comboBoxToolTipDescription || null"
+			tooltip-class="top"
+			[render]="render(selected)"
+			[icon]="icon"
+			(click)="toggleShow()">
+		<div class="placeholder" *ngIf="placeholder" [class.float]="selected || optionsVisible"> {{ placeholder }}</div>
+	</button>
 
 	<div class="options-container"
+		 *ngIf="!disabled"
 		 #optionsContainer [style.visibility]="optionsVisible ? 'visible' : 'hidden'"
 		 tabindex="0" (blur)="onBlurOptionsContainer($event)">
-		<div class="option" *ngFor="let option of options"
-			 [class.selected]="selected === option "
-			 (click)="selectOption(option)"
-			 [innerHTML]="render(option)">
-		</div>
+		<ng-content></ng-content>
 	</div>
 </div>
