--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -2,21 +2,21 @@
 
 	<!-- data input filter-->
 	<div class="combo-box-container block hidden-medium-resolution">
-		<ansyn-combo-box-trigger
+		<button ansynComboBoxTrigger
 			#trigger
 			class="combo-box-width"
 			(click)="toggleDataInputFilterIcon()"
 			icon="icon-status-bar-input-data"
 			[isActive]="dataInputFilterExpand"
-			[comboBoxToolTipDescription]="toolTips.dataInputFilter"
+			[attr.tooltip-value]="toolTips.dataInputFilter"
+			tooltip-class="top"
 			[render]="dataInputFiltersTitle">
-		</ansyn-combo-box-trigger>
+		</button>
 
 		<ansyn-tree-view [@fade]
 						 *ngIf="dataInputFilterExpand"
 						 (ansynClickOutside)="toggleDataInputFilterIcon()"
-						 [trigger]="trigger.elementRef.nativeElement"
-
+						 [trigger]="trigger.optionsTrigger.nativeElement"
 						 (closeTreeView)="toggleDataInputFilterIcon()"
 						 class="ansyn-tree-view"></ansyn-tree-view>
 	</div>
@@ -27,10 +27,15 @@
 			class="combo-box-width"
 			icon="icon-status-bar-orientation"
 			direction="top"
-			[options]="orientations"
-			[selected]="comboBoxesProperties.orientation"
-			[comboBoxToolTipDescription]="toolTips.orientation"
-			(selectedChange)="comboBoxesChange({ orientation: $event })">
+			name="orientation"
+			[ngModel]="comboBoxesProperties?.orientation"
+			[comboBoxToolTipDescription]="toolTips?.orientation"
+			(ngModelChange)="comboBoxesChange({ orientation: $event })">
+
+			<ansyn-combo-box-option *ngFor="let orientation of orientations" [value]="orientation">
+				{{ orientation }}
+			</ansyn-combo-box-option>
+
 		</ansyn-combo-box>
 	</div>
 
@@ -40,11 +45,16 @@
 		<ansyn-combo-box
 			class="combo-box-width"
 			direction="top"
+			name="GeoFilter"
 			[comboBoxToolTipDescription]="toolTips.geoFilter"
 			icon="icon-status-bar-geo"
-			[options]="geoFilters"
-			[selected]="geoFilter"
-			(selectedChange)="geoFilterChanged($event)">
+			[ngModel]="geoFilter"
+			(ngModelChange)="geoFilterChanged($event)">
+
+			<ansyn-combo-box-option *ngFor="let _geoFilter of geoFilters" [value]="_geoFilter">
+				{{ _geoFilter }}
+			</ansyn-combo-box-option>
+
 		</ansyn-combo-box>
 
 		<div class="buttons" [class.active]="geoFilterStatus.searchMode !== SearchModeEnum.none">
@@ -71,12 +81,18 @@
 		<ansyn-combo-box
 			class="combo-box-width"
 			direction="top"
+			name="time"
 			icon="icon-status-bar-time"
 			[comboBoxToolTipDescription]="toolTips.timeFilter"
-			[options]="timeFilters"
-			[selected]="comboBoxesProperties.timeFilter"
-			(selectedChange)="comboBoxesChange({ timeFilter: $event })">
+			[ngModel]="comboBoxesProperties.timeFilter"
+			(ngModelChange)="comboBoxesChange({ timeFilter: $event })">
+
+			<ansyn-combo-box-option *ngFor="let timeFilter of timeFilters" [value]="timeFilter">
+				{{ timeFilter }}
+			</ansyn-combo-box-option>
+
 		</ansyn-combo-box>
+
 		<div class="buttons" [class.active]="timeSelectionEditIcon">
 			<button (click)="toggleTimelineStartEndSearch()"
 					[attr.tooltip-value]="toolTips.timeFilterEdit"
@@ -105,12 +121,17 @@
 		<ansyn-combo-box
 			class="combo-center"
 			direction="top"
+			name="layout"
 			[comboBoxToolTipDescription]="toolTips.screenNumber"
-			[options]="layouts"
 			[renderFunction]="layoutRender.bind(this)"
-			[selected]="layout"
+			[ngModel]="layout"
 			toolTipField="mapsCount"
-			(selectedChange)="layoutSelectChange($event)">
+			(ngModelChange)="layoutSelectChange($event)">
+
+			<ansyn-combo-box-option *ngFor="let layout of layouts; index as index" [value]="layout">
+				<i class="icon-screen-{{index + 1}}" ></i>
+			</ansyn-combo-box-option>
+
 		</ansyn-combo-box>
 	</div>
 
