--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
@@ -1,5 +1,5 @@
 <div>
-	<form  #f="ngForm" >
+	<form #f="ngForm">
 
 		<div class="form-field">
 			<ansyn-input label="Title"
@@ -23,19 +23,32 @@
 		</div>
 
 		<div class="form-field">
-			<ansyn-combo-box color="transparent"
-							 placeholder="*Sensor name"
-							 [(selected)]="sensorName"
-							 [options]="sensorNames">
+			<ansyn-combo-box
+				required
+				name="sensorName"
+				color="transparent"
+				placeholder="*Sensor name"
+				[(ngModel)]="sensorName">
+
+				<ansyn-combo-box-option *ngFor="let sensorName of sensorNames" [value]="sensorName">
+					{{ sensorName }}
+				</ansyn-combo-box-option>
 
 			</ansyn-combo-box>
 		</div>
 
 		<div class="form-field">
-			<ansyn-combo-box color="transparent"
-							 placeholder="*Sharing Options"
-							 [(selected)]="sharing"
-							 [options]="sharingOptions">
+			<ansyn-combo-box
+				required
+				name="sharing"
+				color="transparent"
+				placeholder="*Sharing Options"
+				[(ngModel)]="sharing">
+
+				<ansyn-combo-box-option *ngFor="let sharingOption of sharingOptions" [value]="sharingOption">
+					{{ sharingOption }}
+				</ansyn-combo-box-option>
+
 			</ansyn-combo-box>
 		</div>
 
@@ -52,7 +65,7 @@
 					   (change)="files = $event.target.files"/>
 				*Choose file
 				<p *ngIf="files">
-					{{ files.length > 1 ?  files.length + ' files' : fileInputValue }}
+					{{ files.length > 1 ? files.length + ' files' : fileInputValue }}
 				</p>
 			</label>
 		</div>
