tasks form (cont.)

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -1,4 +1,4 @@
-<div class="small-font small-padding-left">Status</div>
+<div class=" small-padding-left">Status</div>
 <div class="big-font wide-underline small-padding-left margin">{{taskStatus}}</div>
 
 <label>
@@ -18,3 +18,60 @@
 	class="margin"
 >
 </ansyn-combo-box>
+
+<hr class="big-font margin">
+
+<div class=" small-padding-left margin">Area of interest</div>
+
+<div class=" small-padding-left margin">
+	<span>Pin Location</span>
+	<span class="pin"></span>
+</div>
+
+<div class="big-font wide-underline margin"></div>
+
+<div class="two-columns-table">
+	<div>
+		<div>Imagery input</div>
+		<div>Master image</div>
+	</div>
+
+	<div>
+		<ansyn-radio
+			[(ngModel)]="whichOverlays"
+			[value]="'case_overlays'"
+		>Case overlays
+		</ansyn-radio>
+		<div>Active overlay</div>
+	</div>
+
+	<div>
+		<ansyn-radio
+			[(ngModel)]="whichOverlays"
+			[value]="'favorite_overlays'"
+		>Favorite overlays
+		</ansyn-radio>
+	</div>
+
+
+	<div>
+		<ansyn-radio
+			[(ngModel)]="whichOverlays"
+			[value]="'displayed_overlays'"
+		>Displayed overlays
+		</ansyn-radio>
+	</div>
+</div>
+
+<div>Note: this algorithm is only available for 20 overlays</div>
+
+<div class="big-font wide-underline margin"></div>
+
+<div class="margin">The results will be available for download when the task is completed</div>
+
+<div class="run-bar margin">
+	<button ansynButton>Run Task</button>
+	<div>Time Estimation: 2h 30m</div>
+</div>
+
+<div class="errors"></div>
