tasks form (cont.) (combo box new usage)

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -11,12 +11,14 @@
 </label>
 
 <ansyn-combo-box
-	[options]="['aaa', 'bbb', 'ccc']"
-	[selected]="algorithm"
+	[(ngModel)]="algorithm"
 	[color]="'transparent'"
 	[placeholder]="'Select algorithm'"
 	class="margin"
 >
+	<ansyn-combo-box-option *ngFor="let algName of algorithms" [value]="algName">
+		{{ algName }}
+	</ansyn-combo-box-option>
 </ansyn-combo-box>
 
 <hr class="big-font margin">
